tests/typing/faulty_indexing_a.sy
start :: fn do
    a :: [1, 2, 3]
    a[0]
    a["abc"]
end
// error: A 'str' cannot be a 'int'
